--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - conda create --yes -q -c https://conda.anaconda.org/rdkit -n my-rdkit-env rdkit python=2.7
   - source activate my-rdkit-env
   - conda install -y -n my-rdkit-env python=2.7 numpy matplotlib geos shapely scipy
-  - pip install MDAnalysis unittest coveralls
+  - pip install MDAnalysis coveralls
 script: python -m unittest -v lintools.testsuite.analysis.test_topol
 after_success:
   - coveralls
