--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ install:
   - source activate my-rdkit-env
   - conda install -y -n my-rdkit-env python=2.7 numpy nose matplotlib geos shapely scipy
   - pip install MDAnalysis coveralls
-  - chmod +x lintools/lintools/testsuite/lintools_nosetests
+  - chmod +x lintools/testsuite/lintools_nosetests
 script: 
-  - ./lintools_nosetests --with-coverage --cover-package lintools
+  - .lintools/testsuite/lintools_nosetests --with-coverage --cover-package lintools
 after_success:
   - coveralls
