--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ install:
   - conda install -y -n my-rdkit-env python=2.7 numpy nose matplotlib geos shapely scipy
   - pip install MDAnalysis coveralls
   - chmod +x lintools/testsuite/lintools_nosetests
-  - ENV PYTHONPATH $PYTHONPATH:/ldomic/lintools/
+  - echo $(pwd)
+  - export PYTHONPATH=$/ldomic/lintools/:$PYTHONPATH
 script: 
   - ./lintools/testsuite/lintools_nosetests --with-coverage --cover-package lintools --cover-inclusive
 after_success:
