--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ install:
   - source activate my-rdkit-env
   - conda install -y -n my-rdkit-env python=2.7 numpy nose matplotlib geos shapely scipy
   - pip install MDAnalysis coveralls
-  - chmod +x lintools_nosetests
+  - chmod +x lintools//lintools_nosetests
   - python setup.py build
   - python setup.py install
 script: 
-  - ./lintools_nosetests --with-coverage --cover-package lintools 
+  - ./lintools/lintools_nosetests --with-coverage --cover-package lintools 
 after_success:
   - coveralls
