--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 os:
-  - linux
+  - osx
 env:
   global:
     - GH_DOC_BRANCH: master
 before_install:
-  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-MacOSX-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
   - ./miniconda.sh -b -p $(pwd)/miniconda
   - export PATH=$(pwd)/miniconda/bin:$PATH
