--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # OS generated files #
 ######################
-.DS_Store
+/lintools/.DS_Store
 
-topol.ipynb
-
+lintools/topol.ipynb
+lintools/data.pyc
+lintools/figure.pyc
+lintools/plots.pyc
+lintools/lintools.pyc
+lintools/molecule.pyc
+lintools/analysis/hbonds.py
+lintools/analysis/residence_time.py
