--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - python setup.py build
   - python setup.py install
 script: 
-  - ./lintools/lintools_nosetests --with-coverage --cover-package lintools
+  - nosetests --with-coverage --cover-package lintools
   - |
      test ${TRAVIS_PULL_REQUEST} == "false" && \
      test ${TRAVIS_BRANCH} == ${GH_DOC_BRANCH} && \
