--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ before_install:
 install:
   - conda create --yes -q -c https://conda.anaconda.org/rdkit -n my-rdkit-env rdkit python=2.7
   - source activate my-rdkit-env
-  - conda install -y -n my-rdkit-env python=2.7 numpy nose matplotlib geos shapely scipy
+  - conda install -y -n my-rdkit-env python=2.7 numpy  cython nose matplotlib geos shapely scipy
   - conda install -c omnia openbabel=2015.09
-  - pip install MDAnalysis coveralls cython mdtraj
+  - pip install MDAnalysis coveralls mdtraj
   - python setup.py build
   - python setup.py install
 script: 
