--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ os:
   - osx
 env:
   global:
-    - GH_DOC_BRANCH: master
+    - GH_DOC_BRANCH: lintools-analysis
 before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda-latest-MacOSX-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
@@ -10,11 +10,11 @@ before_install:
   - export PATH=$(pwd)/miniconda/bin:$PATH
   - conda update --yes conda
 install:
-  - conda create --yes -q -c https://conda.anaconda.org/rdkit -n my-rdkit-env rdkit python=2.7
+  - conda create --yes -q -c https://conda.anaconda.org/rdki -n my-rdkit-env rdkit==2016.03.4 python=2.7
   - source activate my-rdkit-env
   - conda install -y -n my-rdkit-env python=2.7 numpy  cython nose matplotlib geos shapely scipy
   - conda install -c omnia openbabel=2015.09
-  - pip install MDAnalysis coveralls mdtraj
+  - pip install MDAnalysis==0.16.0  coveralls mdtraj
   - python setup.py build
   - python setup.py install
 script: 
