--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - export PATH=$(pwd)/miniconda/bin:$PATH
   - conda update --yes conda
 install:
-  - conda create --yes -q -c https://conda.anaconda.org/rdki -n my-rdkit-env rdkit==2016.03.4 python=2.7
+  - conda create --yes -q -c https://conda.anaconda.org/rdkit -n my-rdkit-env rdkit==2016.03.4 python=2.7
   - source activate my-rdkit-env
   - conda install -y -n my-rdkit-env python=2.7 numpy  cython nose matplotlib geos shapely scipy
   - conda install -c omnia openbabel=2015.09
