--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 install:
   - conda create --yes -q -c https://conda.anaconda.org/rdkit -n my-rdkit-env rdkit==2016.03.4 python=2.7
   - source activate my-rdkit-env
-  - conda install -y -n my-rdkit-env python=2.7 numpy  cython nose matplotlib geos shapely scipy
+  - conda install -y -n my-rdkit-env python=2.7 numpy  cython nose matplotlib geos shapely scipy yaml
   - conda install -c omnia openbabel=2015.09
   - pip install MDAnalysis==0.16.0  coveralls mdtraj
   - python setup.py build
