--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,11 @@ install:
   - conda install -y -n my-rdkit-env python=2.7 numpy  cython nose matplotlib geos shapely scipy yaml
   - conda install -c omnia openbabel=2015.09
   - pip install MDAnalysis==0.16.0  coveralls mdtraj
+  - wget http://pyyaml.org/download/pyyaml/PyYAML-3.12.tar.gz
+  - tar -zxvf PyYAML-3.12.tar.gz
+  - cd PyYAML-3.12
+  - python setup.py install
+  - cd ../
   - python setup.py build
   - python setup.py install
 script:
