--- a/lintools/testdata/test2/lintools.config
+++ b/lintools/testdata/test2/lintools.config
@@ -6,7 +6,7 @@ input:
   mol file: null
   offset: 30
   output name: test2_1
-  topology: /Users/lauradomicevica/lintools_v1.1/lintools/testdata/ami/lig.gro
+  topology: /tmp/lintools/testdata/ami/lig.gro
   traj end:
   - null
   traj skip:
@@ -14,7 +14,7 @@ input:
   traj start:
   - 1
   trajectory:
-  - /Users/lauradomicevica/lintools_v1.1/lintools/testdata/ami/lig.xtc
+  - /tmp/lintools/testdata/ami/lig.xtc
 representation:
   atom color scheme: viridis
   clock color scheme: summer
