--- a/lintools/testdata/test1/lintools.config
+++ b/lintools/testdata/test1/lintools.config
@@ -6,7 +6,7 @@ input:
   mol file: null
   offset: 30
   output name: test1_1
-  topology: /Users/lauradomicevica/lintools_v1.1/lintools/testdata/ami/lig.gro
+  topology: /tmp/lintools/testdata/ami/lig.gro
   traj end: []
   traj skip: []
   traj start: []
