--- a/lintools/testdata/test3/lintools.config
+++ b/lintools/testdata/test3/lintools.config
@@ -6,7 +6,7 @@ input:
   mol file: null
   offset: 0
   output name: test3_1
-  topology: /Users/lauradomicevica/lintools_v1.1/lintools/testdata/ldp/4XP1.pdb
+  topology: /tmp/lintools/testdata/ldp/4XP1.pdb
   traj end: []
   traj skip: []
   traj start: []
