--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ os:
   - osx
 env:
   global:
-    - GH_DOC_BRANCH: lintools-analysis
+    - GH_DOC_BRANCH: master
 before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
