--- a/recipes/meta.yaml
+++ b/recipes/meta.yaml
@@ -5,7 +5,6 @@ build:
   number: 0
 
 
-
 source:
   git_rev: v0.3
   git_url: https://github.com/ldomic/lintools.git
@@ -33,17 +32,9 @@ requirements:
     - mdanalysis
     - mdtraj
 
-build:
-  script: python setup.py install
-
 test:
-  source_files:
-    - lintools/testdata
-  requires:
-    - nose
-  test:
-    - testdata/test_topol.py
-
+  imports:
+    - lintools.lintools
 
 about:
   home: https://github.com/ldomic/lintools
