--- a/recipes/meta.yaml
+++ b/recipes/meta.yaml
@@ -4,7 +4,7 @@ package:
 build:
   number: 0
   entry_points:
-    - lintools:lintools.__main__:main  
+    - lintools = lintools.__main__:main  
 
 source:
   git_rev: v0.3
